--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
   </style>
 </head>
 <body>
+    <div style="display: flex; align-items: center; justify-content: center; margin-top: 20px;">
+    <img src="images/logo.png" alt="Te Tai Hou Logo" style="height: 80px; margin-right: 15px;">
+    <h1 style="margin: 0;">Te Tai Hou Teams - 2025</h1>
+  </div>
   <div class="wrap">
     <div class="card">
       <header>
