--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       let sortColumn = null;
       let sortAsc = true;
 
-      const headers = ['First Name', 'Last Name', 'Email', 'Contact Number', 'Eligible Team', 'Indicative Selection'];
+      const headers = ['First Name', 'Last Name', 'Indicative Selection'];
       headerRow.innerHTML = headers.map(h => `<th>${h}</th>`).join('');
 
       // Load CSV
