--- a/index.html
+++ b/index.html
@@ -126,9 +126,8 @@
 </head>
 <body>
   <header>
-    <img src="images/logo.png" alt="Te Tai Hou Logo">
     <h1>Te Tai Hou Teams - 2025</h1>
-    <a href="https://www.poriruaheatbasketball.org" target="_blank">
+    <a href="https://www.poriruaheatbasketballclub.org" target="_blank">
       <img src="images/logo.png" alt="Porirua Heat Logo">
     </a>
   </header>
