--- a/index.html
+++ b/index.html
@@ -118,14 +118,15 @@
 <body>
 
   <header>
-    <a href="https://www.poriruaheatbasketballclub.org" target="_blank" title="Visit Porirua Heat Basketball Club">
+    <a href="https://www.poriruaheatbasketball.org" target="_blank" title="Visit Porirua Heat Basketball Club">
       <img src="images/logo.png" alt="Te Tai Hou Logo">
     </a>
-    <h1>Te Tai Hou Teams - 2025</h1>
+    <h1>TE TAI HOU TEAMS - 2025 TERM 4</h1>
   </header>
 
   <hr>
 
+  <div>
   <div>
     <input type="text" id="search" placeholder="Search players...">
     <label for="selectionFilter">Filter by Indicative Selection:</label>
@@ -149,11 +150,7 @@
 
     // Custom group order
     const groupOrder = [
-      "10U Dev", "10U Elite",
-      "12U Dev", "12U Elite",
-      "14U Dev Blue", "14U Elite Black", "14U Elite Gold", "14U Dev Red",
-      "16U Dev", "16U Elite",
-      "20U", "Mens", "Womens"
+      "10U Dev", "10U Elite", "12U Dev", "12U Elite", "14U Dev Blue", "14U Elite Black", "14U Elite Gold", "14U Dev Red", "16U Dev", "16U Elite", "20U", "Mens", "Womens"
     ];
 
     fetch('data.csv')
